自动构建测试

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "electron-live2d",
   "main": "./app/index.js",
   "scripts": {
-    "start": "electron"
+    "start": "electron",
+    "test" : "electron"
   },
   "repository": {
     "type": "git",
