--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,11 @@ node_js:
   - "9.3.0"
 install:
   - "npm install"
+  - export DISPLAY=':99.0'
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+addons:
+  apt:
+    packages:
+      - xvfb
 script:
   - "npm run test"
