--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - export DISPLAY=':99.0'
   - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - "npm install"
+  - "npm i -g electron-mocha"
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script:
