--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ language: node_js
 node_js:
   - "9.3.0"
 install:
+  - npm install -g codecov
   - export DISPLAY=':99.0'
   - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - "npm install"
@@ -13,4 +14,6 @@ install:
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - codecov
   - "npm run test"
